--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,16 @@ venv/
 
 # Exclude outputs
 tests_out/
+
+# Packaging
+*.egg-info/
+*.egg
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
