--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,4 @@ where = src
 [options.entry_points]
 console_scripts =
     protlake-analyze_af3 = protlake.scripts.analyze_af3:main
+    protlake-extract_cif = protlake.scripts.extract_cif:main
